# PQC_Vault

./: .gitignore  CMakeLists.txt  README.md  build.sh  create_desktop_shortcut.sh  create_desktop_shortcut_windows.bat  create_simple_icon.sh  generate_icon.sh  run.sh  setup_windows.bat
assets/: README.md
src/: ArchiveWindow.cpp  ArchiveWindow.h  CryptoArchive.cpp  CryptoArchive.h  DatabaseManagerWindow.cpp  DatabaseManagerWindow.h  DialogHelper.h  EncryptedDatabase.cpp  EncryptedDatabase.h  FirstTimeSetupWindow.cpp  FirstTimeSetupWindow.h  FontManager.cpp  FontManager.h  ImGuiFileDialogConfig.h  LoginWindow.cpp  LoginWindow.h  PasswordManager.cpp  PasswordManager.h  PasswordManagerSecure.cpp  PasswordManager_old.cpp  Settings.cpp  Settings.h  WalletWindow.cpp  WalletWindow.h  main.cpp
